Remove unnecessary weechat log from repo

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ git/gitconfig.symlink
 software/weechat.symlink/logs/*
 !software/weechat.symlink/logs/.gitkeep
 software/weechat.symlink/irc.conf
+software/weechat.symlink/weechat.log
