--- a/software/weechat.symlink/plugins.conf
+++ b/software/weechat.symlink/plugins.conf
@@ -17,6 +17,14 @@ perl.highmon.nick_suffix = ">"
 perl.highmon.output = "buffer"
 perl.highmon.short_names = "off"
 python.check_license = "off"
+python.notify.icon = "/usr/share/pixmaps/weechat.xpm"
+python.notify.ignore_nicks_startwith = "*"
+python.notify.nick_separator = ": "
+python.notify.notify_when_away = "off"
+python.notify.show_hilights = "on"
+python.notify.show_priv_msg = "on"
+python.notify.smart_notification = "off"
+python.notify.urgency = "normal"
 ruby.check_license = "off"
 tcl.check_license = "off"
 
